--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Gdkn</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>Triangle</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <base href="/">
+    <base href="/">
 </head>
 
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
 
 </html>
