--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Triangle - Movie Portal</title>
+    <title>Triangle - Movie Portal/Forum</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <base href="/">
 </head>
 
 <body>
+    <h1></h1>
     <app-root></app-root>
 </body>
 
