--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Triangle - Movie Portal</title>
+    <title>Triangle - Book your bus tickets</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <base href="/">
